feat: Add initial product data synchronization feature for Intelligent Search AI Shopify app
- Updated table of contents (toc.html and toc.js) to include new synchronization documentation.
- Introduced new markdown file for release notes and change logs detailing the initial product synchronization feature.
- Updated SUMMARY.md to link to the new documentation.

--- a/frontend/book/20250418162825_change_sample-repository_4.html
+++ b/frontend/book/20250418162825_change_sample-repository_4.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sample-doc</title>
-        <meta name="robots" content="noindex">
+        <title>20250418162843_change_sample-repository_4 - sample-doc</title>
 
 
         <!-- Custom HTML head -->
@@ -376,11 +375,6 @@ This document provides insights into the implementation of the initial product d
 
         <!-- Custom JS scripts -->
 
-        <script>
-        window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
-        });
-        </script>
 
     </div>
     </body>
