--- a/frontend/book/index.html
+++ b/frontend/book/index.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>sample-doc</title>
-        <meta name="robots" content="noindex">
+        <title>20250418162843_change_sample-repository_4 - sample-doc</title>
 
 
         <!-- Custom HTML head -->
@@ -376,11 +375,6 @@ This document provides insights into the implementation of the initial product d
 
         <!-- Custom JS scripts -->
 
-        <script>
-        window.addEventListener('load', function() {
-            window.setTimeout(window.print, 100);
-        });
-        </script>
 
     </div>
     </body>
