--- a/frontend/book/toc.html
+++ b/frontend/book/toc.html
@@ -28,6 +28,6 @@
         <link rel="stylesheet" href="custom.css">
     </head>
     <body class="sidebar-iframe-inner">
-        <ol class="chapter"></ol>
+        <ol class="chapter"><li class="chapter-item "><a href="20250418162825_change_sample-repository_4.html" target="_parent"><strong aria-hidden="true">1.</strong> 20250418162843_change_sample-repository_4</a></li></ol>
     </body>
 </html>
